--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,5 +21,8 @@
     "eslint": "^8.53.0",
     "react": "^18.2.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@react-spring/web": "^9.7.3"
   }
 }
