--- a/packages/tailwind-preset/package.json
+++ b/packages/tailwind-preset/package.json
@@ -9,6 +9,7 @@
     "tailwindcss": "^3.3.5"
   },
   "dependencies": {
-    "@radix-ui/colors": "^3.0.0"
+    "@radix-ui/colors": "^3.0.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
