--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./magnet": "./src/magnet.tsx",
+    "./hacker-text": "./src/HackerText.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
