--- a/apps/resume/package.json
+++ b/apps/resume/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@repo/ui": "workspace:*",
     "clsx": "^2.0.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
+    "posthog-js": "^1.93.3",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.3"
