--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -8,27 +8,34 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "@repo/tailwind-preset": "workspace:*",
+    "eslint": "^8",
+    "prettier": "^2.8.8",
+    "tailwindcss-animate": "^1.0.5",
+    "eslint-config-next": "14.0.3"
+  },
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@types/node": "18.15.3",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
-    "@vercel/analytics": "^0.1.11",
-    "autoprefixer": "^10.4.16",
+    "@repo/ui": "workspace:*",
     "clsx": "^1.2.1",
     "contentlayer": "^0.3.2",
     "date-fns": "^2.30.0",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
     "jotai": "^2.1.0",
     "lucide-react": "^0.125.0",
     "million": "^2.6.4",
     "next": "14.0.3",
     "next-contentlayer": "^0.3.2",
     "next-themes": "^0.2.1",
-    "postcss": "^8.4.31",
-    "prettier": "^2.8.8",
+    "posthog-js": "^1.93.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-wrap-balancer": "^0.4.1",
@@ -39,9 +46,6 @@
     "remark-gfm": "^3.0.1",
     "shiki": "^0.14.2",
     "swr": "^2.1.5",
-    "tailwind-variants": "^0.1.5",
-    "tailwindcss": "^3.3.5",
-    "tailwindcss-animate": "^1.0.5",
-    "typescript": "5.1.6"
+    "tailwind-variants": "^0.1.5"
   }
 }
