--- a/turbo.json
+++ b/turbo.json
@@ -1,13 +1,29 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
+  "globalDependencies": [
+    "**/.env.*local"
+  ],
+  "globalEnv": [
+    "NEXT_PUBLIC_VERCEL_ENV",
+    "NEXT_PUBLIC_PROJECT_NAME",
+    "NEXT_PUBLIC_POSTHOG_KEY",
+    "NEXT_PUBLIC_URL",
+    "NEXT_PUBLIC_POSTHOG_HOST"
+  ],
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        ".next/**",
+        "!.next/cache/**"
+      ]
     },
     "lint": {
-      "dependsOn": ["^lint"]
+      "dependsOn": [
+        "^lint"
+      ]
     },
     "dev": {
       "cache": false,
