--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -15,7 +15,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.0",
     "@repo/tailwind-preset": "workspace:*",
     "eslint": "^8",
     "prettier": "^2.8.8",
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@repo/ui": "workspace:*",
     "clsx": "^1.2.1",
