--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,8 @@
   "exports": {
     "./magnet": "./src/magnet.tsx",
     "./hacker-text": "./src/HackerText.tsx",
-    "./analytics": "./src/posthog-provider.tsx"
+    "./analytics": "./src/posthog-provider.tsx",
+    "./theme-selector": "./src/theme-selector.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -24,7 +25,10 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-spring/web": "^9.7.3",
+    "clsx": "^2.0.0",
+    "next-themes": "^0.2.1",
     "posthog-js": "^1.93.3"
   }
 }
