--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "typescript": "^5.3.3",
+    "@types/node": "^20.5.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.0",
     "@repo/tailwind-preset": "workspace:*",
-    "eslint": "^8",
+    "eslint": "^8.53.0",
     "prettier": "^2.8.8",
-    "tailwindcss-animate": "^1.0.5",
+    "tailwindcss-animate": "^1.0.7",
     "eslint-config-next": "14.0.3"
   },
   "dependencies": {
@@ -27,7 +27,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@repo/ui": "workspace:*",
-    "clsx": "^1.2.1",
+    "clsx": "^2.0.0",
     "contentlayer": "^0.3.2",
     "date-fns": "^2.30.0",
     "jotai": "^2.1.0",
@@ -37,7 +37,7 @@
     "next-contentlayer": "^0.3.2",
     "next-themes": "^0.2.1",
     "posthog-js": "^1.93.3",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-wrap-balancer": "^0.4.1",
     "rehype-autolink-headings": "^6.1.1",
