--- a/apps/feedback/package.json
+++ b/apps/feedback/package.json
@@ -20,21 +20,21 @@
     "drizzle-orm": "^0.29.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.5.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@repo/tailwind-preset": "workspace:*",
     "autoprefixer": "^10.0.1",
     "drizzle-kit": "^0.20.2",
-    "eslint": "^8",
+    "eslint": "^8.53.0",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "radix-themes-tw": "^0.0.8",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
