--- a/apps/resume/package.json
+++ b/apps/resume/package.json
@@ -15,20 +15,20 @@
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "posthog-js": "^1.93.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "typescript": "^5.3.3",
+    "@types/node": "^20.5.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.0",
     "@repo/tailwind-preset": "workspace:*",
-    "eslint": "^8",
+    "eslint": "^8.53.0",
     "eslint-config-next": "14.0.3"
   }
 }
