--- a/apps/resume/package.json
+++ b/apps/resume/package.json
@@ -16,8 +16,7 @@
     "next-themes": "^0.2.1",
     "posthog-js": "^1.93.3",
     "react": "^18.2.0",
-    "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.5.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
